# card-mm-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/models/dqn/: dqn_ep1000.pt  dqn_ep10000.pt  dqn_ep1200.pt  dqn_ep1500.pt  dqn_ep2000.pt  dqn_ep2500.pt  dqn_ep3000.pt  dqn_ep3500.pt  dqn_ep4000.pt  dqn_ep4500.pt  dqn_ep500.pt  dqn_ep5000.pt  dqn_ep5500.pt  dqn_ep6000.pt  dqn_ep6500.pt  dqn_ep7000.pt  dqn_ep7500.pt  dqn_ep8000.pt  dqn_ep8500.pt  dqn_ep9000.pt  dqn_ep9500.pt  dqn_final.pt
data/models/ippo/: ippo_final.pt  ippo_step10000.pt  ippo_step20000.pt  ippo_step30000.pt  ippo_step40000.pt  ippo_step50000.pt
data/models/mappo/: mappo_final.pt  mappo_step10000.pt  mappo_step20000.pt  mappo_step30000.pt  mappo_step40000.pt  mappo_step50000.pt
docs/: CHANGELOG_RL_VS_RL.md  architecture.md  baselines_comparison.md  evaluation_guide.md
examples/: evaluate_agents_example.py
ood_results/: ood_summary.csv
scripts/: eval_baselines.py  eval_rl_vs_rl.py  run_all_evaluations.sh
src/mmrl/agents/dqn/: train_dqn.py
src/mmrl/agents/ippo/: train_ippo.py
src/mmrl/agents/mappo/: train_mappo.py
src/mmrl/baselines/: __init__.py  ev_realistic.py  level1_realistic.py
src/mmrl/config/: env.yaml
src/mmrl/env/: single_env.py  two_player_env.py
src/mmrl/eval/: compare_agents.py
src/mmrl/human/: cli_play.py  web_demo.py
tests/: test_ev_realistic.py  test_level1_realistic.py  test_rl_vs_rl_eval.py
