[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmrl"
version = "0.1.0"
description = "Card-Sum Market Making RL - A research codebase for studying market-taking strategies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "MMRL Team"}
]
keywords = ["reinforcement-learning", "market-making", "gymnasium", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gymnasium>=0.28.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "torch>=1.10.0",
    "tensorboard>=2.8.0",
    "pyyaml>=5.4.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "mmrl[test,dev]",
    "streamlit>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/amyai1/card-mm-rl"
Repository = "https://github.com/amyai1/card-mm-rl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["mmrl"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
